--- a/tags.html
+++ b/tags.html
@@ -20,7 +20,7 @@
         <a href="https://moives.disney.com/tangled/products"><img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150608-27674-10u3zar_e7b16b8b.jpeg?region=0,0,1024,428"/></a>
     
             <iframe width="560" height="315" src="https://www.youtube.com/embed/7y8WtISzHeY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </body>What is true about broadcast vs. narrowcast?
+    </body>
 
 
     
