--- a/someCss.html
+++ b/someCss.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>steven court</head>
+    <head>
+        <title>Jolin's Website</title>
+        <link rel="stylesheet" href="anExternal.css">
+    </head>
+
     <body>
+        <div class="container">
+            <img src="steven tour.jpg" alt="Snow" style="width:100%;">
+            <div class="centered"><font size="100">My aprtment</font></div>
+        </div>
         <font size="10" color="blue"> steven hall located in west campus, festures spacious rooms and furnitures.</font>
-        <font size="4" color="red">rooms types includes four bedrooms and 2 bedrooms</font>
+        <font size="4" color="red">rooms types includes four bedrooms and 2 bathrooms</font>
         <br/>
         <image src="Stevens-Court-bedroom-2019.jpg"alt="stevencourt" height="50px" width="50px"/>
         <br/>
@@ -18,6 +26,7 @@
                 <p>welcome</p>
         </div>
         <p class="ex1">apply now</p>
+        <p class="padding">Jolin's website-steven court lots of fun!</p>
         <style>
             p.exl{
                     margin: 20px 20px 20px;
@@ -27,9 +36,15 @@
                 h1{ 
                     border-style: dotted;
                 }
+        
                 
             </style>
             <h1>DON'T MISS THE DUE DAY!!!</h1>
+            <ul id="rcorner">
+                <li><a href="http://google.com">Google</a></li>
+                <li><a href="http://uw.edu">UW</a></li>
+                <li><a href="http://youtube.com">YouTube</a></li>
+            </ul>
         </style>
     </body>
 </html>
