--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Digital Trend - Blog</title>
+     <title>Jolin website</title>
 <!--
 
 DIGITAL TREND
@@ -34,7 +34,7 @@ https://templatemo.com/tm-538-digital-trend
         <div class="container">
             <a class="navbar-brand" href="myFunSite.html">
               <i class="fa fa-line-chart"></i>
-              Digital Trend
+              join team
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -45,13 +45,16 @@ https://templatemo.com/tm-538-digital-trend
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="myFunSite.html#about" class="nav-link">Studio</a>
+                        <a href="myFunSite.html#about" class="nav-link">Insight</a>
                     </li>
                     <li class="nav-item">
                         <a href="myFunSite.html#project" class="nav-link">Our Works</a>
                     </li>
                     <li class="nav-item">
                         <a href="blog.html" class="nav-link active">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="blog2.html" class="nav-link active">Blog2</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link contact">Contact</a>
