--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,16 @@ https://templatemo.com/tm-538-digital-trend
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="myFunSite.html#about" class="nav-link">Studio</a>
+                        <a href="myFunSite.html#about" class="nav-link">Insight</a>
                     </li>
                     <li class="nav-item">
                         <a href="myFunSite.html#project" class="nav-link">Our Works</a>
                     </li>
                     <li class="nav-item">
                         <a href="blog.html" class="nav-link">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="blog2.html" class="nav-link">Blog2</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link active contact">Contact</a>
